actual fix to #8, more spacing. Still not ideal

--- a/nyc/test/self.css
+++ b/nyc/test/self.css
@@ -50,10 +50,6 @@ label [for=date_of_birth-year] {
     margin-left: 8px;
 }
 
-.displayAsSeparated.subField.year.seperatedDateField-alignAbove {
-    margin-left: 8px;
-}
-
 .confirmation-header {
     width: 100%;
     background-color: #01427a;
@@ -126,4 +122,7 @@ span.govuk-details__summary:active, span.govuk-details__summary:focus {
 ._AF .btn.btn-default.btn-manual:hover, .achieveforms-container .btn.btn-default.btn-manual:hover {
     background-color: #fff;
     min-height: 0px;
+}
+._AF input[type=text].displayAsSeparated, .achieveforms-container input[type=text].displayAsSeparated {
+    margin-right: 30px;
 }
